--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,7 +7,7 @@
                   <span class="self-center text-2xl font-thin whitespace-nowrap text-white">Green Lab</span>
               </a>
           </div>
-          <div class="footer-link grid grid-cols-2 text-center   text-white font-jost list-none items-center">
+          <div class="footer-link grid grid-cols-2 text-center   text-white font-jost list-none items-center md:text-lg">
                       <li>
                           <a routerLink="/" class="hover:text-light-green">Головна</a>
                       </li>
@@ -28,9 +28,9 @@
                       </li>
           </div>
       </div>
-      <hr class="mt-4 sm:mx-auto lg:my-8 " />
-      <div class="sm:flex sm:items-center sm:justify-between">
-          <span class="text-xs text-white sm:text-center dark:text-gray-400">© 2023-2024 GreenLab. Всі права захищені.
+      <hr class="mt-4 lg:my-8 " />
+      <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
+          <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2024 GreenLab. Всі права захищені.
           </span>
       </div>
     </div>
