--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="navbar bg-white relative">
     <div class="md:container ml-2 mr-2">
-        <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 lg:px-8" aria-label="Global">
+        <nav class="mx-auto flex max-w-7xl items-center space-x-10 justify-between p-2 md:mx-3 lg:px-8" aria-label="Global">
             <div class="flex lg:flex-1">
                 <a routerLink="/" class="-m-1.5 p-1.5 grid justify-items-center">
-                    <img class="h-8 w-auto" src="../../../assets/images/logo.png" alt="logo">
-                    <div class="title-text text-slate-950 font-montserrat_alternates font-bold text-xs lg:text-sm ">Green PCR Lab</div>
+                    <img class="h-8 w-auto md:h-14" src="../../../assets/images/logo.png" alt="logo">
+                    <div class="title-text text-slate-950 font-montserrat_alternates font-bold text-xs lg:text-sm lg:text-center">Green PCR Lab</div>
                 </a>
             </div>
             <app-burger-menu></app-burger-menu>
