--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -3,7 +3,7 @@
         <div class="w-full max-w-screen-xl mx-auto py-4 md:p-2">
             <div class="flex items-center justify-between min-h-full">
                 <ul
-                    class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6">
+                    class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6 md:text-lg">
                     <li class="place-content-center">
                         <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
                         <a class="hover:text-gray-300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
