--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -1,6 +1,10 @@
 
 .main-image {
-    min-height: 100dvh;
+    // min-height: 300px; /* Минимальная высота изображения */
+    width: 100%; /* Изображение растягивается по ширине контейнера */
+    height: auto; /* Пропорционально изменяется высота */
+    object-fit: cover;
+    min-height: 86dvh;
     border-radius: 0 0 30px 30px;
     -moz-border-radius: 0 0 30px 30px;
     -webkit-border-radius: 0 0 30px 30px;
@@ -104,19 +108,36 @@
 }
 
 .certificate {
-    background: rgb(128,255,211);
-    background: linear-gradient(161deg, rgba(128,255,211,1) 0%, rgba(198,255,128,1) 100%);
+    background: rgb(128, 255, 211);
+    background: linear-gradient(161deg, rgba(128, 255, 211, 1) 0%, rgba(198, 255, 128, 1) 100%);
     border-radius: 120px 0 0 120px;
-    -moz-border-radius: 120px 0 0 120px;
-    -webkit-border-radius: 120px 0 0 120px;
     border: 0 solid #000000;
 }
 
 .certificate img {
-    width: 70%;
-    aspect-ratio: 3/2;
-    object-fit: contain;
+    width: 70%;  /* Установка ширины изображений на 70% */
+    aspect-ratio: 3/2;  /* Соотношение сторон изображений 3:2 */
+    object-fit: contain;  /* Обеспечивает сохранение пропорций изображений */
 }
+
+/* Убедитесь, что родительский элемент имеет достаточную ширину */
+// @media (min-width: 1280px) {
+//     .certificate {
+//         max-width: 100%;
+//     }
+// }
+
+// @media(min-height:1187px) and (max-height:1800px) {
+//     .main-image {
+//         min-height: 150dvh;
+//     }
+// }
+
+// @media (max-width: 1280px) {
+//     .main-image {
+//         min-height: 86dvh;
+//     }
+// }
 
 .modal {
     display: none;
@@ -175,3 +196,6 @@
     from {transform:scale(0)}
     to {transform:scale(1)}
 }
+
+
+
