--- a/src/app/components/pages/license/license.component.html
+++ b/src/app/components/pages/license/license.component.html
@@ -1,4 +1,4 @@
-<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg">
+<div class="container ss:max-xl:bg-purple ss:max-xl:min-w-full font-nunito text-lg md:px-6">
     <div class="flex flex-wrap justify-center ss:max-xl:min-w-full">
         <h2 class="text-center text-4xl pt-10 text-gray-800 font-semibold">
             <svg class=" fill-gray-800 mr-3 h-10 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
@@ -15,7 +15,7 @@
                 перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.</p>
 
             <h4 class="font-bold text-2xl text-center my-2">Сертифікат визнання вимірювальних можливостей</h4>
-            <img src="../../../../assets/images/main/doc_certificate.png" alt="Сертифікат визнання вимірювальних можливостей">
+            <img src="../../../../assets/images/main/doc_certificate.png" class="mx-auto" alt="Сертифікат визнання вимірювальних можливостей">
 
             <h4 class="font-bold text-2xl text-center my-2">Акт санітарно-епідеміологічного обстеження об'єкта</h4>
             <app-slideshow [images]="[
