--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <p class="price-info font-raleway my-5 md:text-xl lg:text-lg lg:my-2">Ціни вказані за станом на 20.03.2024</p>
-      <div class="block worktime text-center font-jost p-1 mx-6 md:text-2xl md:mt-36 md:leading-9 lg:text-xl lg:mx-32 lg:font-medium xl:mt-8">
+      <div class="block worktime text-center font-jost p-1 mx-6 md:text-2xl md:mt-36 md:leading-9 lg:text-xl lg:mx-32 lg:font-medium xl:mt-8 xl:mx-60">
         <p>Графік роботи:</p>
         <p>ПН-СБ 10.00-18.00 (НД-вихідний)</p>
         <p>Доставка з клініки м.Чорноморськ ПН-СБ (НД-вихідний)</p>
