--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -1,9 +1,9 @@
 <header class="topbar">
     <div class="container">
-        <div class="w-full max-w-screen-xl mx-auto py-4 md:p-2">
+        <div class="w-full max-w-screen-xl mx-auto py-4 md:p-2 xl:p-1">
             <div class="flex items-center justify-between min-h-full">
                 <ul
-                    class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6 md:text-lg">
+                    class="flex flex-wrap font-raleway place-content-center mb-0 text-sm font-tiny text-white sm:space-x-6 md:text-lg xl:text-base">
                     <li class="place-content-center">
                         <img class="float-left mr-2" src="../../../assets/images/topbar/address.ico" alt="address" />
                         <a class="hover:text-gray-300" href="https://maps.app.goo.gl/p5xPvoY4jPQRvJ8Q9"
@@ -19,11 +19,16 @@
                             href="mailto:green.laboratoriya@gmail.com">green.laboratoriya&#64;gmail.com</a>
                     </li>
                 </ul>
-                <ul class="topbar-socials hidden flex-wrap items-center space-x-3 mb-6 sm:mb-0 lg:flex">
+                <ul class="topbar-socials hidden flex-wrap items-center space-x-3 mb-6 sm:mb-0 lg:flex xl:space-x-4">
                     <li>
                         <a href="viber://chat?number=%2B380962986084" target="_blank" rel="noreferrer"><img
                                 src="../../../assets/images/topbar/viber.ico" alt="viber" /></a>
                     </li>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="2" height="12" viewBox="0 0 2 10" fill="none">
+                        <line x1="1" y1="0" x2="1" y2="10" stroke="#ffffff" stroke-width="2"/>
+                        <circle cx="1" cy="2" r="1" fill="#ffffff"/>
+                        <circle cx="1" cy="8" r="1" fill="#ffffff"/>
+                    </svg>
                     <li>
                         <a href="https://t.me/+380935582302" target="_blank" rel="noreferrer"><img
                                 src="../../../assets/images/topbar/telegram.ico" alt="telegram" /></a>
