Удаление файла yandex-browser-24-7-4-1292.exe из коммита

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class=" bg-gray-900">
-    <div class="flex flex-col mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
-        <div class="md:flex md:justify-between">
+    <div class="flex flex-col mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8 xl:py-3">
+        <div class="md:flex md:justify-between xl:items-center xl:mb-5">
           <div class="mb-6 md:mb-0">
               <a routerLink="/" class="flex items-center">
                   <img src="../../assets/images/logo.png" class="h-8 me-3" alt="GrenLab Logo" />
@@ -28,7 +28,7 @@
                       </li>
           </div>
       </div>
-      <hr class="mt-4 lg:my-8 " />
+      <hr class="mt-4 lg:my-8 xl:my-0" />
       <div class="sm:flex sm:items-center sm:justify-between md:mt-3">
           <span class="text-xs text-white dark:text-gray-400 md:text-sm">© 2023-2024 GreenLab. Всі права захищені.
           </span>
