--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -32,17 +32,17 @@
 
   <!-- About us -->
   <div class="container">
-    <div class="font-nunito text-base relative py-6 -mt-8 mb-5 bg-white rounded-3xl shadow-2xl drop-shadow-md md:mx-6 lg:mx-6 ">
+    <div class="font-nunito text-base relative py-6 -mt-8 mb-5 bg-white rounded-3xl shadow-2xl drop-shadow-md md:mx-6 lg:mx-6 xl:mx-48 xl:px-10 ">
       <h2 class="text-center text-3xl pt-3 pb-6 text-gray-800 font-semibold">Про нас</h2>
       <h4 class="text-center font-bold pb-3 px-8">Універсальна ПЛР Лабораторія Green lab</h4>
-      <p class="indent-6 px-6">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
+      <p class="indent-6 px-6 xl:text-base">Універсальна лабораторія &ndash; це сучасний ветеринарний діагностичний центр, основний
         напрямок
         роботи якого-молекулярно-генетичні дослідження хвороб дрібних домашніх тварин.Своєчасна і точна
         діагностика є невід&rsquo;ємною частиною професіоналізму ветеринарного лікаря. Щодня до нього за допомогою
         звертається безліч власників тварин з проханням допомогти їх улюбленому вихованцеві і найчастіше
         питання, яке задають ветеринарним фахівцям: &#171;Лікар, що з ним?&raquo;.<br>
       </p>
-      <p class="indent-6 px-6">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
+      <p class="indent-6 px-6 xl:text-base">Саме тому мы створили сучасну ветеринарну лабораторію, оснащену високотехнічним обладнанням і
         використовує технології ХХІ століття, розраховану саме на роботу з чотириногими пацієнтами.
         Наша особлива гордість-вперше для українських ветеринарних лікарів доступна технологія &ldquo;
         ПЛР-РВ&rdquo; (ПЛР в реальному часі), що значно випередила інші варіанти ПЛР за точністю
@@ -56,7 +56,7 @@
         і з увагою поставимося до ваших пропозицій!
         Універсальна діагностична лабораторія-сучасні методи діагностики для професіоналів.
       </p>
-      <p class="text-center mt-5 italic mx-6">З повагою, універсальна лабораторія Green PCR lab.</p>
+      <p class="text-center mt-5 italic mx-6 xl:text-base">З повагою, універсальна лабораторія Green PCR lab.</p>
       <div class="mx-auto block">
         <img class="block m-auto align-baseline" src="../../../assets/images/main/about_us.png" alt="About us">
       </div>
@@ -64,26 +64,25 @@
   </div>
   <hr>
 
-  <!-- Certificate-->
-  <div class="certificate my-6 flex flex-col items-center ml-4 font-nunito">
-    <div class="m-4 text-center">
-      <h2 class="text-xl font-semibold text-gray-800 py-5 lg:text-3xl">Приклад результатів</h2>
-      <div class="text-sm lg:text-xl">
+  <div class="certificate my-6 flex flex-col items-center ml-4 font-nunito xl:flex-row">
+    <div class="m-4 text-center xl:text-left xl:w-1/3">
+      <h2 class="text-xl font-semibold text-gray-800 py-5 lg:text-3xl text-center">Приклад результатів</h2>
+      <div class="text-sm lg:text-xl xl:text-base text-center">
         Результати відправляємо на e-mail адресу, а також по пошті на вказаний в бланці адресу.
       </div>
     </div>
   
-    <div class="flex flex-wrap justify-center items-center gap-8">
-      <div class="flex flex-col items-center">
+    <div class="flex flex-wrap justify-center items-center gap-8 xl:flex-nowrap xl:w-2/3 xl:h-64">
+      <div class="flex flex-col items-center xl:h-40 xl:justify-center">
         <img id="myImg1" src="../../../assets/images/main/cert1.png" alt="Сертифікат №1" 
              (click)="openModal('../../../assets/images/main/cert1.png', 'Електронний — відправляємо на електронну адресу.')">
-        <div class="text-sm lg:text-lg text-center mt-2 px-10 italic">Електронний — відправляємо на електронну адресу.</div>
+        <div class="text-sm lg:text-lg text-center mt-2 px-10 xl:px-0 italic xl:text-sm">Електронний — відправляємо на електронну адресу.</div>
       </div>
   
-      <div class="flex flex-col items-center">
+      <div class="flex flex-col items-center xl:h-40 xl:justify-center">
         <img id="myImg2" src="../../../assets/images/main/cert2.png" alt="Сертифікат №2" 
              (click)="openModal('../../../assets/images/main/cert2.png', 'Друкований (замовляється окремо) — з мокрою печаткою, англійською мовою, відправляється поштою.')">
-        <div class="text-sm lg:text-lg text-center mt-2 px-10 italic mb-3">Друкований (замовляється окремо) — з мокрою печаткою, англійською мовою, відправляється поштою.</div>
+        <div class="text-sm lg:text-lg text-center mt-2 px-10 xl:px-0 italic mb-3 xl:text-sm xl:text-center w-3/4">Друкований (замовляється окремо) — з мокрою печаткою, англійською мовою, відправляється поштою.</div>
       </div>
     </div>
   
@@ -98,13 +97,15 @@
 
   <!-- Contacts-->
   <div class="contacts container py-10 font-nunito">
-    <h2 class="text-center text-3xl pt-1 pb-10 text-gray-800 font-semibold"><svg
-        class=" fill-gray-800 mr-2 h-8 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+    <h2 class="text-center text-3xl pt-1 pb-10 text-gray-800 font-semibold">
+      <svg class=" fill-gray-800 mr-2 h-8 inline" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <path
           d="M96 0C60.7 0 32 28.7 32 64V448c0 35.3 28.7 64 64 64H384c35.3 0 64-28.7 64-64V64c0-35.3-28.7-64-64-64H96zM208 288h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H144c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zM512 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V80zM496 192c-8.8 0-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V208c0-8.8-7.2-16-16-16zm16 144c0-8.8-7.2-16-16-16s-16 7.2-16 16v64c0 8.8 7.2 16 16 16s16-7.2 16-16V336z" />
-      </svg>Контакти</h2>
+      </svg>
+      Контакти
+    </h2>
       <div class="content">
-        <div class="flex flex-col md:flex-row flex-wrap place-content-center text-center space-y-8 md:space-y-0 md:space-x-8">
+        <div class="flex flex-col md:flex-row flex-wrap place-content-center text-center space-y-8 md:space-y-0 md:space-x-8 xl:space-x-32">
           <div class="address-contacts">
             <svg class="w-6 inline py-1 fill-sky" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path d="M172.3 501.7C27 291 0 269.4 0 192 0 86 86 0 192 0s192 86 192 192c0 77.4-27 99-172.3 309.7-9.5 13.8-29.9 13.8-39.5 0zM192 272c44.2 0 80-35.8 80-80s-35.8-80-80-80-80 35.8-80 80 35.8 80 80 80z" />
@@ -151,16 +152,16 @@
           </svg>
           Дозвільні документи
         </h1>
-        <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 md:text-lg lg:text-xl text-center">
+        <p class="max-w-2xl mb-6 font-light text-gray-900 lg:mb-8 md:text-lg lg:text-xl text-center xl:text-base">
           Лабораторія "Грін ПЛР Лаб" сертифікована за всіма критеріями відповідно до вимог та норм законодавства України. Усі аналізи виконуються виключно на приладах та устаткуванні, які пройшли метрологічну перевірку та відповідають усім вимогам та критеріям діагностичної лабораторії.
         </p>
-        <a routerLink="/license" class="gradient-button-green inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100">
+        <a routerLink="/license" class="gradient-button-green inline-flex items-center justify-center px-5 py-3 text-base font-medium text-center text-gray-900 border border-gray-300 rounded-lg hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 xl:text-sm xl:font-light">
           Переглянути документи
         </a>
       </div>
       <div class="lg:mt-0 lg:col-span-5 lg:flex mt-2 justify-center mx-auto px-20 flex-col items-center">
-        <img src="../../../assets/images/main/doc_certificate.png" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/doc_certificate.png', 'Сертифікат визнання вимірювальних можливостей')">
-        <div class="font-nunito text-sm text-center md:text-lg mt-2 italic">
+        <img src="../../../assets/images/main/doc_certificate.png" class="w-40 cursor-pointer" alt="Сертифікат №2" (click)="openModal('../../../assets/images/main/doc_certificate.png', 'Сертифікат визнання вимірювальних можливостей')">
+        <div class="font-nunito text-sm text-center md:text-lg mt-2 italic xl:text-sm">
           Сертифікат визнання вимірювальних можливостей
         </div>
       </div>
